--- a/PhotoDrop/PhotoList.storyboard
+++ b/PhotoDrop/PhotoList.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="04f-4K-4ZS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="04f-4K-4ZS">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,26 +22,75 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GiH-tc-UjO">
-                                <rect key="frame" x="67" y="203" width="240" height="286"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="99" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GiH-tc-UjO">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="photoCell" textLabel="Gla-jD-Msg" style="IBUITableViewCellStyleDefault" id="UxL-QQ-bek">
-                                        <rect key="frame" x="0.0" y="28" width="240" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="photoCell" rowHeight="99" id="UxL-QQ-bek">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="99"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UxL-QQ-bek" id="E7C-Yw-mZu">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="98"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gla-jD-Msg">
-                                                    <rect key="frame" x="15" y="0.0" width="210" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YlR-y4-aRv">
+                                                    <rect key="frame" x="8" y="23" width="303" height="53"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yyV-QQ-8as">
+                                                            <rect key="frame" x="0.0" y="0.0" width="43" height="27"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="piC-g9-AOa">
+                                                            <rect key="frame" x="0.0" y="35" width="303" height="18"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="User" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNx-oI-BHt">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="270" height="18"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Zr-k4-6Nu">
+                                                                    <rect key="frame" x="270" y="0.0" width="33" height="18"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="piC-g9-AOa" firstAttribute="leading" secondItem="YlR-y4-aRv" secondAttribute="leading" id="VTn-RW-Oyb"/>
+                                                        <constraint firstAttribute="trailing" secondItem="piC-g9-AOa" secondAttribute="trailing" id="bfs-Wd-Uby"/>
+                                                    </constraints>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Tt4-v4-yfT">
+                                                    <rect key="frame" x="327" y="20" width="40" height="58"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="joF-Ba-YEU">
+                                                            <rect key="frame" x="0.0" y="0.0" width="40" height="14"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diamond-gold" translatesAutoresizingMaskIntoConstraints="NO" id="EyT-SR-syY">
+                                                            <rect key="frame" x="0.0" y="18" width="40" height="40"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="EyT-SR-syY" secondAttribute="height" multiplier="1:1" id="Mvx-yN-x4O"/>
+                                                                <constraint firstAttribute="width" constant="40" id="vfh-xY-Je3"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Tt4-v4-yfT" secondAttribute="trailing" constant="8" id="9aD-ZT-Uxd"/>
+                                                <constraint firstItem="Tt4-v4-yfT" firstAttribute="leading" secondItem="YlR-y4-aRv" secondAttribute="trailing" constant="16" id="QI3-Tz-Cap"/>
+                                                <constraint firstItem="YlR-y4-aRv" firstAttribute="leading" secondItem="E7C-Yw-mZu" secondAttribute="leading" constant="8" id="bPZ-bO-uAg"/>
+                                                <constraint firstItem="Tt4-v4-yfT" firstAttribute="centerY" secondItem="E7C-Yw-mZu" secondAttribute="centerY" id="g7o-Gz-L3u"/>
+                                                <constraint firstItem="YlR-y4-aRv" firstAttribute="centerY" secondItem="E7C-Yw-mZu" secondAttribute="centerY" id="vKC-LR-AM8"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="Baj-hE-43Z" kind="show" id="HJj-fM-BcX"/>
@@ -52,16 +102,27 @@
                                     <outlet property="delegate" destination="04f-4K-4ZS" id="dFn-E4-5QW"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bgo-F7-j2F">
-                                <rect key="frame" x="172" y="544" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Map"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bgo-F7-j2F">
+                                <rect key="frame" x="138" y="517" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Q6Y-ZB-Hox"/>
+                                    <constraint firstAttribute="width" secondItem="Bgo-F7-j2F" secondAttribute="height" multiplier="1:1" id="Uhp-Fa-Y0p"/>
+                                </constraints>
+                                <state key="normal" image="maps-button"/>
                                 <connections>
                                     <action selector="mapButtonTapped:" destination="04f-4K-4ZS" eventType="touchUpInside" id="4lt-tP-IQC"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.53609974540000005" green="1" blue="0.99327762159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="GUd-nO-AuN" firstAttribute="top" secondItem="GiH-tc-UjO" secondAttribute="bottom" id="1iV-29-LfJ"/>
+                            <constraint firstItem="Bgo-F7-j2F" firstAttribute="centerX" secondItem="6q1-kV-66l" secondAttribute="centerX" id="9os-e9-VtJ"/>
+                            <constraint firstItem="GiH-tc-UjO" firstAttribute="leading" secondItem="6q1-kV-66l" secondAttribute="leading" id="bde-5x-saF"/>
+                            <constraint firstItem="GUd-nO-AuN" firstAttribute="top" secondItem="Bgo-F7-j2F" secondAttribute="bottom" constant="50" id="d6S-VP-u24"/>
+                            <constraint firstItem="GiH-tc-UjO" firstAttribute="top" secondItem="IiR-oR-FMP" secondAttribute="bottom" id="oKe-lg-6nf"/>
+                            <constraint firstAttribute="trailing" secondItem="GiH-tc-UjO" secondAttribute="trailing" id="qMh-3X-SEC"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="photoListTableView" destination="GiH-tc-UjO" id="e60-dr-syG"/>
@@ -80,4 +141,8 @@
             <point key="canvasLocation" x="535" y="58"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="diamond-gold" width="38" height="32"/>
+        <image name="maps-button" width="89" height="87"/>
+    </resources>
 </document>
