--- a/PhotoDrop/PhotoList.storyboard
+++ b/PhotoDrop/PhotoList.storyboard
@@ -26,34 +26,34 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="photoCell" rowHeight="99" id="UxL-QQ-bek" customClass="PhotoTableViewCell" customModule="PhotoDrop" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="photoCell" id="8aP-Jh-uEj" customClass="PhotoTableViewCell" customModule="PhotoDrop" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="99"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UxL-QQ-bek" id="E7C-Yw-mZu" customClass="PhotoTableViewCell" customModule="PhotoDrop" customModuleProvider="target">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8aP-Jh-uEj" id="ytD-FO-Saw">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="98.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YlR-y4-aRv">
-                                                    <rect key="frame" x="8" y="23.5" width="303" height="52.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="loC-6Z-1RZ">
+                                                    <rect key="frame" x="8" y="28" width="311" height="42.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yyV-QQ-8as">
-                                                            <rect key="frame" x="0.0" y="0.0" width="42.5" height="26.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCu-tl-2GL">
+                                                            <rect key="frame" x="0.0" y="0.0" width="40.5" height="25.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="piC-g9-AOa">
-                                                            <rect key="frame" x="0.0" y="34.5" width="303" height="18"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="jFF-Ts-q4H">
+                                                            <rect key="frame" x="0.0" y="25.5" width="311" height="17"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNx-oI-BHt">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="270.5" height="18"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HCz-vV-mWh">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="66.5" height="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Zr-k4-6Nu">
-                                                                    <rect key="frame" x="270.5" y="0.0" width="32.5" height="18"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WTv-lW-fFN">
+                                                                    <rect key="frame" x="280.5" y="0.0" width="30.5" height="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -61,44 +61,43 @@
                                                         </stackView>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="piC-g9-AOa" firstAttribute="leading" secondItem="YlR-y4-aRv" secondAttribute="leading" id="VTn-RW-Oyb"/>
-                                                        <constraint firstAttribute="trailing" secondItem="piC-g9-AOa" secondAttribute="trailing" id="bfs-Wd-Uby"/>
+                                                        <constraint firstAttribute="trailing" secondItem="jFF-Ts-q4H" secondAttribute="trailing" id="diK-f2-Bpa"/>
                                                     </constraints>
                                                 </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Tt4-v4-yfT">
-                                                    <rect key="frame" x="327" y="20.5" width="40" height="57.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kH6-tf-Sdd">
+                                                    <rect key="frame" x="327" y="22.5" width="40" height="54.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="joF-Ba-YEU">
-                                                            <rect key="frame" x="0.0" y="0.0" width="40" height="13.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZKQ-vx-qic">
+                                                            <rect key="frame" x="0.0" y="0.0" width="40" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diamond-gold" translatesAutoresizingMaskIntoConstraints="NO" id="EyT-SR-syY">
-                                                            <rect key="frame" x="0.0" y="17.5" width="40" height="40"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diamond-gold" translatesAutoresizingMaskIntoConstraints="NO" id="7H7-3k-ZpL">
+                                                            <rect key="frame" x="0.0" y="14.5" width="40" height="40"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" secondItem="EyT-SR-syY" secondAttribute="height" multiplier="1:1" id="Mvx-yN-x4O"/>
-                                                                <constraint firstAttribute="width" constant="40" id="vfh-xY-Je3"/>
+                                                                <constraint firstAttribute="width" secondItem="7H7-3k-ZpL" secondAttribute="height" multiplier="1:1" id="Oa1-5J-kIj"/>
+                                                                <constraint firstAttribute="width" constant="40" id="pLE-xz-8OB"/>
                                                             </constraints>
                                                         </imageView>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="Tt4-v4-yfT" secondAttribute="trailing" constant="8" id="9aD-ZT-Uxd"/>
-                                                <constraint firstItem="Tt4-v4-yfT" firstAttribute="leading" secondItem="YlR-y4-aRv" secondAttribute="trailing" constant="16" id="QI3-Tz-Cap"/>
-                                                <constraint firstItem="YlR-y4-aRv" firstAttribute="leading" secondItem="E7C-Yw-mZu" secondAttribute="leading" constant="8" id="bPZ-bO-uAg"/>
-                                                <constraint firstItem="Tt4-v4-yfT" firstAttribute="centerY" secondItem="E7C-Yw-mZu" secondAttribute="centerY" id="g7o-Gz-L3u"/>
-                                                <constraint firstItem="YlR-y4-aRv" firstAttribute="centerY" secondItem="E7C-Yw-mZu" secondAttribute="centerY" id="vKC-LR-AM8"/>
+                                                <constraint firstItem="loC-6Z-1RZ" firstAttribute="centerY" secondItem="ytD-FO-Saw" secondAttribute="centerY" id="BpB-Rs-G1Y"/>
+                                                <constraint firstItem="kH6-tf-Sdd" firstAttribute="centerY" secondItem="ytD-FO-Saw" secondAttribute="centerY" id="Dsk-Kf-HbC"/>
+                                                <constraint firstItem="loC-6Z-1RZ" firstAttribute="leading" secondItem="ytD-FO-Saw" secondAttribute="leading" constant="8" id="MFK-QN-bXz"/>
+                                                <constraint firstItem="kH6-tf-Sdd" firstAttribute="leading" secondItem="loC-6Z-1RZ" secondAttribute="trailing" constant="8" id="Q2Q-xb-o2d"/>
+                                                <constraint firstAttribute="trailing" secondItem="kH6-tf-Sdd" secondAttribute="trailing" constant="8" id="TVH-za-Ce9"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="dateLabel" destination="8Zr-k4-6Nu" id="G2b-vU-ChU"/>
-                                            <outlet property="gemImageView" destination="EyT-SR-syY" id="Unn-BQ-Evl"/>
-                                            <outlet property="pointsLabel" destination="joF-Ba-YEU" id="DJq-Cp-PvY"/>
-                                            <outlet property="titleLabel" destination="yyV-QQ-8as" id="DKQ-M2-HKZ"/>
-                                            <outlet property="usernameLabel" destination="fNx-oI-BHt" id="8KD-WF-Xz0"/>
-                                            <segue destination="Baj-hE-43Z" kind="show" identifier="toPhotoDetail" id="HJj-fM-BcX"/>
+                                            <outlet property="dateLabel" destination="WTv-lW-fFN" id="Ccy-M0-4VY"/>
+                                            <outlet property="gemImageView" destination="7H7-3k-ZpL" id="lOS-jZ-cq5"/>
+                                            <outlet property="pointsLabel" destination="ZKQ-vx-qic" id="82J-aW-D0o"/>
+                                            <outlet property="titleLabel" destination="sCu-tl-2GL" id="3d2-7T-q37"/>
+                                            <outlet property="usernameLabel" destination="HCz-vV-mWh" id="AbV-8V-QzP"/>
+                                            <segue destination="Baj-hE-43Z" kind="show" identifier="toPhotoDetail" id="dl7-SJ-HKw"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -136,7 +135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Skr-67-2lu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="13.6" y="129.98500749625188"/>
+            <point key="canvasLocation" x="97" y="88"/>
         </scene>
         <!--Photo-->
         <scene sceneID="s9C-kW-9Dx">
@@ -144,7 +143,7 @@
                 <viewControllerPlaceholder storyboardName="Photo" id="Baj-hE-43Z" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="29i-Jq-s9Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="634" y="130"/>
+            <point key="canvasLocation" x="646" y="130"/>
         </scene>
     </scenes>
     <resources>
